infrastructure-simulation/personal-tier-beta/service-backend-personal.yaml
apiVersion: v1
kind: Service
metadata:
  name: netops-backend
  namespace: prod-customer-beta
spec:
  type: ClusterIP
  selector:
    app: netops-backend
  ports:
    - port: 8000
      targetPort: 8000
