infrastructure-simulation/personal-tier-beta/service-frontend-personal.yaml
apiVersion: v1
kind: Service
metadata:
  name: netops-frontend
  namespace: prod-customer-beta
spec:
  type: ClusterIP
  selector:
    app: netops-frontend
  ports:
    - port: 80
      targetPort: 80
